# compound-flooding

./: .gitignore  Data_Preprocessing.md  Framework.md  README.md  compare_precipitation.py  environment.yml  how_to_run_code.md  plot_tier3_visualizations.py  pyproject.toml  requirements.txt  run_tier3_batch.sh  setup.py  station_data_summary.csv  station_list.txt  test_files.py  tier1_planning_summary.csv  trial.ipynb  try.py
data/processed/: correction_results.csv  station_quality_assessment.csv  tier_A_stations.csv  tier_B_stations.csv  tier_C_stations.csv  usable_stations_for_tier1.csv
interactive_map_app/: README.md  app.py  check_data.py  requirements.txt  run.sh
interactive_map_app/assets/: style.css
scripts/: 01_data_quality_filtering.py  02_data_correction.py  02b_visualize_corrections.py  ERA5_data_retrieval.py  compound_flooding_processor.py  gesla.py  ground_precipitation_integrator.py  publication_figures.py  visualize_compound_flooding.py
scripts_01/: gesla_era5_integrator.py
src/compound_flooding/: __init__.py  bn_core.py  bn_diagnostics.py  bn_learning.py  cli.py  copula_fit.py  copula_params.py  copula_selection.py  copula_utils.py  data_io.py  joint_empirical.py  preprocess.py  thresholds.py  tier1_stats.py  tier2_copula.py  tier3_bn.py  univariate.py  viz.py
src/compound_flooding/visualization/: __init__.py  base.py  events.py  export.py  maps.py  tier1_plots.py  tier2_plots.py  tier3_plots.py
src/preprocessing/: data_correction.py  data_loader.py  quality_control.py
src/utils/: file_utils.py  parallel.py
src/visualization/: __init__.py  events.py  export.py  maps.py  plotting.py  tier1_plots.py  tier2_plots.py
tests/: test_cli.py  test_data_io.py  test_preprocess.py
