[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compound_flooding"
version = "0.1.0"
description = "Research-grade codebase for compound flood analysis following the three-tier methodology"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Saurav Bhattarai, Rocky Talchabhadel, Aaron Byrd", email = "saurav.bhattarai.1999@gmail.com, rocky.talchabhadel@jsums.edu, Aaron.R.Byrd2@usace.army.mil"}
]
maintainers = [
    {name = "Maintainer", email = "maintainer@example.com"}
]
keywords = ["climate", "flood", "sea level", "precipitation", "copula", "extreme value"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "xarray>=0.19.0",
    "matplotlib>=3.4.0",
    "cartopy>=0.20.0",
    "dask>=2021.10.0",
    "netcdf4>=1.5.7",
    "pytest>=6.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "black>=21.9b0",
    "isort>=5.9.3",
    "mypy>=0.910",
    "flake8>=3.9.2",
]

gpu = [
    "cupy>=10.0.0",
    "numba>=0.54.0",
    "cudf>=21.10.0",
]

[project.urls]
Homepage = "https://github.com/Saurav-JSU/compound_flooding"
Issues = "https://github.com/Saurav-JSU/compound_flooding/issues"
Documentation = "https://compound_flooding.readthedocs.io"

[tool.setuptools]
packages = ["compound_flooding"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"